--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1> does it easybake</h1>
     <div id="root"></div>
     <script src="index.js"></script>
 </body>
